--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_signin_button: ^2.0.0
   flutter_staggered_grid_view: ^0.4.0
-  firebase_auth: ^1.0.1 # add this line
-  firebase_core: ^1.0.2 # add this line
+  firebase_auth:
+  firebase_core:
+  cloud_firestore:
 
 dev_dependencies:
   flutter_test:
