--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_auth:
   firebase_core:
   cloud_firestore:
+  flutter_local_notifications: 
 
 dev_dependencies:
   flutter_test:
