--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_core:
   cloud_firestore:
   flutter_local_notifications: 
+  flutter_datetime_picker: ^1.5.1
+  
 
 dev_dependencies:
   flutter_test:
