--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   cloud_firestore:
   flutter_local_notifications: 
   flutter_datetime_picker: ^1.5.1
+  flutter_native_timezone: ^2.0.0
+  shared_preferences: ^2.0.7
   
 
 dev_dependencies:
